# mathpad

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  micropython.drawio  package-lock.json  pyproject.toml  renovate.json  tox.ini
.github/: FUNDING.yml  labels.toml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature-request.md
.github/workflows/: ci.yml  deploy.yml  gh-pages-jupyter.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  pages-jupyter.yml
docs/: Makefile  _config.yml  _toc.yml  api.rst  pyproject.toml
docs/source/: changelog.md  conf.py  contributing.md  index.md  installation.md  usage.md
examples/: TLDR.ipynb  Walkthrough.ipynb  braking_deceleration.ipynb  braking_deceleration.ipynbx  cart_spring.ipynb  cart_spring_cargo.ipynb  cart_spring_pendulum.ipynb  double_pendulum.ipynb  pendulum.ipynb  showcase.ipynb  simple_pendulum.ipynb  test.py  vectors.ipynb  walkthrough.ipynb
jupyterlite/: requirements.txt
jupyterlite-sandbox/: build-environment.yml  environment.yml  jupyter-lite.json  pyproject.toml
mathpad/: SymbolicMatrixFunction.py  __init__.py  _generate_units.py  _global_options.py  _quality_of_life.py  _relation.py  _vector_space.py  algebra.py  calculus.py  codegen.py  constants.py  dimensions.py  display.py  elec.py  equation.py  functions.py  global_options.py  matrix.py  mech.py  physical_quantities.py  physical_quantity.py  simulate_dynamic_system.py  solve.py  trigonometry.py  units.py  val.py  var.py  vars.py  vec3.py  vector.py  vector_space.py
mathpad/core/: __init__.py  _generate_units_py.py  common_vals.py  constants.py  dimensions.py  equation.py  frame.py  matrix.py  units.py  val.py  vector.py  vector_space.py
mathpad/math/: __init__.py  calculus.py  solve.py  trigonometry.py
mathpad/maths/: algebra.py  functions.py
mathpad/sympy_extensions/: SymbolicMatrixFunction.py  __init__.py  (+4 more)
tests/: _test_utils.py  conftest.py  test_algebra.py  test_calculus.py  test_codegen.py  test_functions.py  test_matrix.py  test_physical_quantity.py  test_solve.py  test_val.py  test_vector.py  test_vector_space.py
(+50 files in other folders)
