[tool.poetry]
name = "mathpad"
version = "0.1.3"
description = "Simplified interface to Sympy for solving physics, engineering and maths problems"
authors = ["Callum J Hays <callumjhays@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CallumJHays/mathpad"
documentation = "https://mathpad.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "mathpad" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CallumJHays/mathpad/issues"
"Changelog" = "https://mathpad.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = ">=3.7,<3.10" # < 3.10 required by scipy currently
typing-extensions = "^3.10.0"
numpy = "^1.20"
sympy = "^1.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
tox = "^3.20.1"
pre-commit = "^2.13.0"
ipykernel = "^6.4.1"
ansitable = "^0.9.6"
plotly = "^5.3.1"
nbformat = "^5.1.3"
ipywidgets = "^7.6.5"
scipy = "^1.7.1"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "mathpad/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault"

[tool.isort]
profile = "black"
known_first_party = ["mathpad", "tests"]
